--- a/_config.yml
+++ b/_config.yml
@@ -113,3 +113,8 @@ category_archive:
 tag_archive:
   type: liquid
   path: /tags/
+
+  mathjax:
+  enable: true
+  config: "TeX-AMS-MML_HTMLorMML"
+
