--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,13 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: MM
-email:
+title: Mohid Farhan | Exploring the Physics of the Universe
+email: mohidf35@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-twitter_username: username
-github_username: username
+github_username: MohidFarhan
 minimal_mistakes_skin: default
 search: true
 
@@ -31,7 +30,7 @@ remote_theme: mmistakes/minimal-mistakes
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: Asia/Karachi
 
 include:
   - _pages
@@ -58,34 +57,26 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "First Lastname"
-  avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  name   : "Mohid Farhan"
+  avatar : "/assets/images/profile.jpg"  # Optional: upload a profile image there
+  bio    : "Physics undergrad | Cosmology and Quantum junkie | Blogging the dark universe, one post at a time."
   links:
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      url: "https://github.com/MohidFarhan"
+    - label: "Email"
+      icon: "fas fa-fw fa-envelope"
+      url: "mailto:mohidf35@gmail.com"
+
 
 footer:
   links:
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      url: "https://github.com/MohidFarhan"
+    - label: "Email"
+      icon: "fas fa-fw fa-envelope"
+      url: "mailto:mohidf35@gmail.com"
 
 defaults:
   # _posts
@@ -99,6 +90,8 @@ defaults:
       comments: true
       share: true
       related: true
+      mathjax: true  
+
   # _pages
   - scope:
       path: "_pages"
@@ -106,15 +99,17 @@ defaults:
     values:
       layout: single
       author_profile: true
+      mathjax: true 
 
 category_archive:
   type: liquid
   path: /categories/
+
 tag_archive:
   type: liquid
   path: /tags/
 
-  mathjax:
+mathjax:
   enable: true
   config: "TeX-AMS-MML_HTMLorMML"
 
