--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 title: Mohid Farhan | Exploring the Physics of the Universe
 email: mohidf35@gmail.com
-description: >-   A physics blog exploring quantum mechanics, relativity, and the universe's hidden structure. Created by Mohid Farhan.
+description: "A physics blog exploring quantum mechanics, relativity, and the universe's hidden structure. Created by Mohid Farhan."
 github_username: MohidFarhan
 minimal_mistakes_skin: default
 search: true
