--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,12 @@ github_username: MohidFarhan
 minimal_mistakes_skin: default
 search: true
 
+url: "https://mohidfarhan.github.io"
+baseurl: "" # leave this empty since you’re using a user site
+
+repository: "MohidFarhan/MohidFarhan.github.io"
+
+
 # Math support
 mathjax: true
 
