--- a/_config.yml
+++ b/_config.yml
@@ -75,13 +75,13 @@ defaults:
       share: true
       related: true
 
-  - scope:
-      path: "_pages"
-      type: pages
-    values:
-      layout: single
-      use_math: true
-      author_profile: true
+ - scope:
+    path: "_pages"
+    type: pages
+  values:
+    layout: page
+    use_math: true
+    author_profile: true
 
 # Archives
 category_archive:
