--- a/_config.yml
+++ b/_config.yml
@@ -47,6 +47,9 @@ author:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/MohidFarhan"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/mohid-farhan-79101121a/"
     - label: "Email"
       icon: "fas fa-fw fa-envelope"
       url: "mailto:mohidf35@gmail.com"
