--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ plugins:
 author:
   name: "Mohid Farhan"
   avatar: "/assets/images/photo.jpg"
-  bio: "Physics Graduate | Exploring Cosmology and Quantum Physics | Blogging the dark universe."
+  bio: "Researcher and Science Communicator | Exploring Cosmology and Quantum Physics | Blogging the dark universe."
   links:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
